tests/purs/failing/Generalization1.out
Error found:
in module [33mMain[0m
at tests/purs/failing/Generalization1.purs:6:1 - 6:14 (line 6, column 1 - line 6, column 14)

  Unable to generalize the type of the recursive function [33mfoo[0m.
  The inferred type of [33mfoo[0m was:
  [33m                                                  [0m
  [33m  forall t4. Semigroup t4 => Int -> t4 -> t4 -> t4[0m
  [33m                                                  [0m
  Try adding a type signature.

in binding group foo, bar

See https://github.com/purescript/documentation/blob/master/errors/CannotGeneralizeRecursiveFunction.md for more information,
or to contribute content related to this error.

